tests/kiama/negative/name_errors/L1/4_selfref1.ob
MODULE selfref;

CONST
    aconst1 = aconst1;

END selfref.
